--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ pendulum = "*"
 ftfy = "*"
 fuzzywuzzy = {extras = ["speedup"],version = "*"}
 nltk = "*"
+pycld2 = {path = "./../wheel/pycld2-0.31-cp37-cp37m-win_amd64.whl"}
+pyicu = {path = "./../wheel/PyICU-2.2-cp37-cp37m-win_amd64.whl"}
+polyglot = {git = "https://github.com/aboSamoor/polyglot.git",ref = "master"}
 
 [requires]
 python_version = "3.7"
